# pythonBasico

./: bubble_sort.py  clases.py  colas.py  main.py  mutabilidad.py  recursividad.py
10_containers/a_base/: Dockerfile
10_containers/c_python_project/: Dockerfile  pyproject.toml
10_containers/d_compose/: Dockerfile  pyproject.toml
10_containers/python_project/example/: main.py
11_databases/: docker-compose.yml
1_basics/: ejemplo.js  funcional.py  pilas.py
2_module_examples/: cocina.py  recepcion.py
2_module_examples/my_package/: __init__.py  otra_cocina.py
3_decoradores/: 2_cache_decorator.py  3_retry_decorator.py
4_clases/: 2_escuela.py  3_herencia.py
5_parallelization/: 1_threads.py  2_async.py
6_garbage_collector/: 1_memory.py
8_package_manager/1_pip/: main.py  requirements.txt
8_package_manager/2_pipenv/: Pipfile
8_package_manager/3_poetry/example/: pyproject.toml
8_package_manager/3_poetry/example/example/: main.py
8_package_manager/3_poetry/example/tests/: test_main.py
9_design_patterns/: 1_decorator.py  2_decorator_class.py  3_singleton.py  4_factory.py
basics/: clases.py  double_linked_list.py  tipos.py
decoradores/: 1__decorador_basico.py
